// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic value 1`] = `
Bits {
  "idx": Object {
    "a": 0,
    "b": 1,
    "c": 2,
    "d": 3,
    "e": 4,
    "f": 5,
    "g": 6,
  },
  "labels": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
  ],
  "mask": 127,
  "nega": Object {
    "a": 2147483646,
    "b": 2147483645,
    "c": 2147483643,
    "d": 2147483639,
    "e": 2147483631,
    "f": 2147483615,
    "g": 2147483583,
  },
  "posi": Object {
    "a": 1,
    "b": 2,
    "c": 4,
    "d": 8,
    "e": 16,
    "f": 32,
    "g": 64,
  },
}
`;

exports[`basic value 2`] = `
BitsData {
  "field": Bits {
    "idx": Object {
      "a": 0,
      "b": 1,
      "c": 2,
      "d": 3,
      "e": 4,
      "f": 5,
      "g": 6,
    },
    "labels": Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
      "g",
    ],
    "mask": 127,
    "nega": Object {
      "a": 2147483646,
      "b": 2147483645,
      "c": 2147483643,
      "d": 2147483639,
      "e": 2147483631,
      "f": 2147483615,
      "g": 2147483583,
    },
    "posi": Object {
      "a": 1,
      "b": 2,
      "c": 4,
      "d": 8,
      "e": 16,
      "f": 32,
      "g": 64,
    },
  },
  "has": Object {
    "field": 0,
    "has": 0,
    "is": 0,
    "value": 0,
  },
  "is": Object {
    "field": false,
    "has": false,
    "is": false,
    "value": false,
  },
  "value": 127,
}
`;

exports[`showlabel value 1`] = `
Bits {
  "idx": Object {
    "current": 4,
    "link": 8,
    "magnify": 6,
    "mention": 9,
    "pin": 0,
    "potof": 3,
    "search": 5,
    "side": 7,
    "toc": 1,
  },
  "labels": Array [
    "pin",
    "toc",
    "toc",
    "potof",
    "current",
    "search",
    "magnify",
    "side",
    "link",
    "mention",
  ],
  "mask": 1023,
  "nega": Object {
    "current": 2147483631,
    "link": 2147483391,
    "magnify": 2147483583,
    "mention": 2147483135,
    "pin": 2147483646,
    "potof": 2147483639,
    "search": 2147483615,
    "side": 2147483519,
    "toc": 2147483641,
  },
  "posi": Object {
    "current": 16,
    "link": 256,
    "magnify": 64,
    "mention": 512,
    "pin": 1,
    "potof": 8,
    "search": 32,
    "side": 128,
    "toc": 6,
  },
}
`;

exports[`showlabel value 2`] = `
BitsData {
  "field": Bits {
    "idx": Object {
      "current": 4,
      "link": 8,
      "magnify": 6,
      "mention": 9,
      "pin": 0,
      "potof": 3,
      "search": 5,
      "side": 7,
      "toc": 1,
    },
    "labels": Array [
      "pin",
      "toc",
      "toc",
      "potof",
      "current",
      "search",
      "magnify",
      "side",
      "link",
      "mention",
    ],
    "mask": 1023,
    "nega": Object {
      "current": 2147483631,
      "link": 2147483391,
      "magnify": 2147483583,
      "mention": 2147483135,
      "pin": 2147483646,
      "potof": 2147483639,
      "search": 2147483615,
      "side": 2147483519,
      "toc": 2147483641,
    },
    "posi": Object {
      "current": 16,
      "link": 256,
      "magnify": 64,
      "mention": 512,
      "pin": 1,
      "potof": 8,
      "search": 32,
      "side": 128,
      "toc": 6,
    },
  },
  "has": Object {
    "field": 0,
    "has": 0,
    "is": 0,
    "value": 0,
  },
  "is": Object {
    "field": false,
    "has": false,
    "is": false,
    "value": false,
  },
  "value": 1023,
}
`;
